Update Cors Allowed Origins